--- a/.github/workflows/terraform-deploy.yml
+++ b/.github/workflows/terraform-deploy.yml
@@ -14,6 +14,9 @@ jobs:
       - name: Checkout código
         uses: actions/checkout@v3
 
+      - name: Verificar acesso ao secret (parcial, seguro)
+        run: echo "${{ secrets.AWS_ACCESS_KEY_ID }}" | cut -c1-4
+  
       - name: Configurar AWS Credentials
         uses: aws-actions/configure-aws-credentials@v2
         with:
